styles/main.css
@import url('https://fonts.googleapis.com/css2?family=Raleway');
* {
    color: white;
    font-family: 'Raleway', sans-serif;
    scroll-behavior: smooth;
    text-decoration: none;
    margin: 0;
    padding: 0;
}


.arrowUp{
    position: fixed;
    left: 5vh;
    top: 90vh;
}

.flechita{
        transform: rotate(180deg);
}


.arrow {
    left: 49.8%;
    top: 85vh;
    position: absolute;
}
@media (max-width: 621px) {
    .arrow{
        left: 47.5%;
        top: 90%;
    }

    .arrowUp{
        display: none;
    }

}


.bounce {
    -moz-animation: bounce 10s infinite;
    -webkit-animation: bounce 10s infinite;
    animation: bounce 10s infinite;
}



@keyframes bounce {

    0%,
    20%,
    50%,
    80%,
    100% {
        transform: translateY(0);
    }

    40% {
        transform: translateY(-30px);
    }

    60% {
        transform: translateY(-15px);
    }
}

#particles-js {
    width: 100%;
    height: 100%;
    position: fixed;
    background-image: url('#');
    background-size: cover;
    background-position: 50% 50%;
    background-repeat: no-repeat;;
}

body {
    width: 100%;
    height: 100%;
    background-color: #07080a;
    overflow-x: hidden;
}

.row{
    width: 100%;
    justify-content: space-between;
}


#equipo{
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
}

#equipo label{
    font-size: 5vh;
    font-weight: bold;
    padding-bottom: 5vh;
}

#loader{  
    position: fixed;
    display: flex;
    place-items: center;
    justify-content: center;
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    background-color: #07080a;
    z-index: 100;
}
#logo{
    position: absolute;
    left: 100px;
    font-size: 24px;
    z-index: 3;
}
#menu{
    background-color: #07080a;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.4em;
    z-index: 2;
    opacity: 1;
    flex-wrap: wrap;
    margin-top: 10px;
    position: relative;
}

@media (max-width: 621px) {
    #menu {
       display: none; 
    }
}

#menu a{
    align-items: center;
    color: #b9b7b7;
    transition: 0.15s;
    font-weight: bold;
}
#menu a:hover{
    color: #716fa3;
    transition: 0.15s;
}
.pipe{
    color: #a7a7a7;
    transition: 0.15s; 
}
@media (max-width: 940px) {
    #logo{
        left: -20px;
        position: inherit;
        display: inline-flex;
    }
}
@media (max-width: 621px) {
    .pipe{
        display: none;
    }
    #menu{
        flex-direction: column;
        
    }    
    #logo{
        left: 0;
        margin-bottom: 10px;
    }
}







#homepage {
    margin: 0 auto;
    width: 100vw;
    height: 90vh;
    display: flex;
}
@media (max-width: 621px) {
    #homepage {
        padding-top: 20vh;
    }
}

@media (max-width: 621px) { 
    #homepage {
        margin-top: 30px;
        flex-direction: column;
        align-items: center;
        font-size: small;
    }
    #izq{
        margin-bottom: 120px;
    }
    #dere{
        font-size: small;
        display: flex;
        flex-direction:column;
        margin: -100px;
        align-items: start;
        text-align: start;
    }
}
#izq{
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#der{
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

#der label{
    display: block;
    color: rgb(255, 255, 255);
}

.question{
    font-size: 8vh;
    font-weight: bold;
    text-shadow: 1px 1px white;
    justify-content: center;
    align-items: center;
    text-align: center;
    margin-bottom: 0;
}

@media (max-width: 621px) {
    .question {
        width: 90%;
        margin-inline: 5%;
        font-size: 5vh;
    }
}


.title {
    font-size: 4vh;
    width: 90%;
    margin-inline: 5%;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.subtitle {
    font-size: 2.2vh;
    justify-content: center;
    align-items: center;
    text-align: center;
}

